@@ -9,4 +9,5 @@ Bug fixes
 -
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
-- 
+- wftool.isBehaviorAllowedFor accepts "publishing" as alias for
+  constants.TRANSITION_ALLOWSUB_PUBLISHING
